apps/home/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-detector-app
  labels:
    app: bear-detector-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bear-detector-app
  template:
    metadata:
      labels:
        app: bear-detector-app
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: bear-detector-app
        image: homelabratory.azurecr.io/bear-detector-app:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3030
          name: http
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /api
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /api
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
