apps/home/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-app
  labels:
    app: home-app
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: home-app
