apps/home/k8s/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: home-app
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`home.local`) && PathPrefix(`/api`)
      services:
        - name: api/home-app
          port: 3000
